codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
