codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt
