codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Upload logs and rollout?

  Is it OK to upload the log and rollout for the main agent and all sub-agents


› 1. Yes  Share the current Codex session log and rollout with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
